# Solana_v3

./: AGENTS.md  Cargo.toml  amm_12_pairs_fast.toml  amm_12_pairs_triangular_fast.toml  amm_cross_venue_generated_fast.toml  amm_cross_venue_live_trimmed.toml  amm_cross_venue_plus_intra_ray_fast.toml  amm_cross_venue_plus_intra_ray_trimmed.toml  amm_cross_venue_plus_simple_fast.toml  rejection_analysis.md  sol_usdc_routes.toml  sol_usdc_routes_amm_fast.toml  triangular_sol_usdc_usdt_routes.toml
crates/bot/: Cargo.toml
crates/bot/proto/: shredstream.proto
crates/bot/src/: account_batcher.rs  bootstrap.rs  build_sign_dispatch.rs  config.rs  control.rs  daemon.rs  execution_context.rs  ingress.rs  lib.rs  live.rs  main.rs  observer.rs  persistence.rs  refresh.rs  route_health.rs  rpc.rs  runtime.rs  sources.rs  submit_dispatch.rs  submit_factory.rs
crates/builder/: Cargo.toml
crates/builder/src/: execution.rs  lib.rs  templates.rs  transaction_builder.rs  types.rs
crates/detection/: Cargo.toml  build.rs
crates/detection/src/: account_batcher.rs  events.rs  ingestor.rs  lib.rs  live.rs  proto.rs  proxy.rs  rpc.rs  shredstream.rs  sources.rs
crates/domain/: Cargo.toml
crates/domain/src/: events.rs  executable_pool_state.rs  lib.rs  quote_models.rs  types.rs
crates/reconciliation/: Cargo.toml
crates/reconciliation/src/: classifier.rs  history.rs  lib.rs  onchain.rs  tracker.rs
crates/signerd/: Cargo.toml
crates/signerd/src/: lib.rs  main.rs
crates/signing/: Cargo.toml
crates/signing/src/: lib.rs  protocol.rs  signer.rs  wallet.rs
crates/state/: Cargo.toml
crates/state/src/: account_store.rs  decoder.rs  dependency_graph.rs  executable_pool_state.rs  execution_state.rs  lib.rs  pool_snapshots.rs  quote_models.rs  types.rs  warmup.rs
crates/strategy/: Cargo.toml
crates/strategy/src/: guards.rs  lib.rs  opportunity.rs  quote.rs  reasons.rs  route_registry.rs  selector.rs
crates/submit/: Cargo.toml
crates/submit/src/: jito.rs  lib.rs  router.rs  rpc.rs  submitter.rs  types.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs  logging.rs  metrics.rs
deploy/systemd/: solana-bot.service.in  solana-signerd.service.in
docs/: routes.md
docs/architecture/: crate-boundaries.md  hft-bot-scaffold.md  normalized-event.md  solana-arb-hft-state-of-the-art-audit-2026-03-25.md  state-of-the-art-review.md  triangular-arbitrage.md
docs/archives/: README.md
docs/archives/architecture/: hft-bot-scaffold.md  state-of-the-art-review.md
docs/bot/: README.md  audit.md  deployment.md  persistence.md  yellowstone-shredstream-runbook.md
docs/perf/: 2026-03-26-latency-analysis-static.md  2026-03-28-reject-investigation-playbook.md  README.md  latency-analysis-template.md
docs/specs/: README.md  bot.md  builder.md  detection.md  domain.md  reconciliation.md  scripts-and-deployment.md  signerd.md  signing.md  state.md  strategy.md  submit.md  telemetry.md  workspace.md
scripts/: check_crate_boundaries.py  generate_cross_venue_manifest.py  generate_triangular_manifest.py  install_bot_systemd.sh  install_solana_yellowstone.sh  measure_bot_latency.sh  render_bot_config.sh  select_live_route_universe.py
