[workspace]
members = [
    "crates/bot",
    "crates/builder",
    "crates/detection",
    "crates/reconciliation",
    "crates/signing",
    "crates/state",
    "crates/strategy",
    "crates/submit",
    "crates/telemetry",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
authors = ["OpenAI Codex"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
toml = "0.9"
