[workspace]
members = [
    "crates/bot",
    "crates/builder",
    "crates/detection",
    "crates/domain",
    "crates/reconciliation",
    "crates/signerd",
    "crates/signing",
    "crates/state",
    "crates/strategy",
    "crates/submit",
    "crates/telemetry",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
authors = ["OpenAI Codex"]

[workspace.dependencies]
bincode = "1.3"
bs58 = "0.5"
primitive-types = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "4.0.1"
thiserror = "2.0"
toml = "0.9"
