[package]
name = "bot"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64 = "0.22"
builder = { path = "../builder" }
detection = { path = "../detection" }
reconciliation = { path = "../reconciliation" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
signing = { path = "../signing" }
solana-address-lookup-table-interface = { version = "2.2.2", features = ["bincode", "bytemuck"] }
solana-sdk.workspace = true
state = { path = "../state" }
strategy = { path = "../strategy" }
submit = { path = "../submit" }
telemetry = { path = "../telemetry" }
thiserror.workspace = true
toml.workspace = true
