[package]
name = "bot"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64 = "0.22"
bincode.workspace = true
builder = { path = "../builder" }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
detection = { path = "../detection" }
domain = { path = "../domain" }
ratatui = "0.29"
reconciliation = { path = "../reconciliation" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.33", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
signing = { path = "../signing" }
solana-address-lookup-table-interface = { version = "2.2.2", features = ["bincode", "bytemuck"] }
solana-sdk.workspace = true
state = { path = "../state" }
strategy = { path = "../strategy" }
submit = { path = "../submit" }
telemetry = { path = "../telemetry" }
thiserror.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
toml.workspace = true

[dev-dependencies]
signerd = { path = "../signerd" }
