[package]
name = "builder"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bincode.workspace = true
solana-system-interface = { version = "3.1.0", features = ["bincode"] }
solana-sdk.workspace = true
state = { path = "../state" }
strategy = { path = "../strategy" }
thiserror.workspace = true
