[package]
name = "builder"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bincode.workspace = true
domain = { path = "../domain" }
solana-system-interface = { version = "3.1.0", features = ["bincode"] }
solana-sdk.workspace = true
strategy = { path = "../strategy" }
thiserror.workspace = true
