[package]
name = "reconciliation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
domain = { path = "../domain" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
submit = { path = "../submit" }
thiserror.workspace = true
tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
