[package]
name = "signing"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64 = "0.22"
builder = { path = "../builder" }
bs58.workspace = true
serde.workspace = true
serde_json.workspace = true
solana-sdk.workspace = true
state = { path = "../state" }
thiserror.workspace = true

[dev-dependencies]
strategy = { path = "../strategy" }
